temporarily removed wave animation

--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
 					Commodi hic aut, a impedit voluptate rerum.
 				</p>
 			</section>
-			<div class="ocean">
+			<!-- <div class="ocean">
 				<div class="wave"></div>
 				<div class="wave"></div>
-			</div>
+			</div> -->
 		</div>
 	</body>
 </html>
