--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<title>AWS DeepComposer Community</title>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css"
+		/>
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
@@ -22,9 +26,15 @@
 				</ul>
 			</nav>
 			<section id="home">
-				<img src="assets/deepcomposer.png" alt="deepcomposer" />
-				<h1 style="color: red;">AWS Deepcomposer Community</h1>
-				<p style="max-width: 50%;">
+				<img
+					src="assets/deepcomposer.png"
+					alt="deepcomposer"
+					class="animated bounceInDown"
+				/>
+				<h1 style="color: red;" class="animated fadeIn delay-1s">
+					AWS Deepcomposer Community
+				</h1>
+				<p style="max-width: 50%;" class="animated fadeIn delay-1s">
 					A community of AWS DeepComposer enthusiasts established to
 					share ideas and questions, helping to expand our collective
 					knowledge! We have the biggest collection of AWS League
@@ -33,7 +43,7 @@
 				</p>
 				<a
 					href="http://join.deepracing.io"
-					class="hvr-buzz"
+					class="hvr-buzz animated zoomInUp delay-2s "
 					target="_blank"
 					rel="noopener noreferrer"
 					>JOIN US ON SLACK</a
