--- a/index.html
+++ b/index.html
@@ -17,12 +17,6 @@
 				<ul>
 					<li><a href="#home" class="hvr-buzz">Home</a></li>
 					<li><a href="#about" class="hvr-buzz">About</a></li>
-					<li><a href="#blog" class="hvr-buzz">Blog</a></li>
-					<li>
-						<a href="#contest" class="hvr-buzz"
-							>Community Contest</a
-						>
-					</li>
 				</ul>
 			</nav>
 			<section id="home">
@@ -31,7 +25,10 @@
 					alt="deepcomposer"
 					class="animated bounceInDown"
 				/>
-				<h1 style="color: red;" class="animated fadeIn delay-1s">
+				<h1
+					style="color: rgb(23, 164, 219);"
+					class="animated fadeIn delay-1s"
+				>
 					AWS Deepcomposer Community
 				</h1>
 				<p style="max-width: 50%;" class="animated fadeIn delay-1s">
@@ -43,32 +40,49 @@
 				</p>
 				<a
 					href="http://join.deepracing.io"
-					class="hvr-buzz animated zoomInUp delay-2s "
+					class="hvr-buzz"
 					target="_blank"
 					rel="noopener noreferrer"
 					>JOIN US ON SLACK</a
 				>
 			</section>
 			<section id="about">
-				<h1>About Us</h1>
-				<p>
-					Lorem ipsum dolor sit amet consectetur adipisicing elit.
-					Commodi hic aut, a impedit voluptate rerum.
+				<h1 style="color: rgb(23, 164, 219);">About Us</h1>
+				<p style="max-width: 50%;">
+					Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+					Soluta nobis architecto sapiente, quasi et ducimus incidunt
+					expedita dolores laborum asperiores doloremque corrupti odit
+					molestias nam aut fugiat ad! Ipsa, vero?
 				</p>
-			</section>
-			<section id="blog">
-				<h1>Blog</h1>
-				<p>
-					Lorem ipsum dolor sit amet consectetur adipisicing elit.
-					Commodi hic aut, a impedit voluptate rerum.
-				</p>
-			</section>
-			<section id="contest">
-				<h1>Community Contest</h1>
-				<p>
-					Lorem ipsum dolor sit amet consectetur adipisicing elit.
-					Commodi hic aut, a impedit voluptate rerum.
-				</p>
+				<div class="external-links">
+					<a
+						href="https://blog.deepcomposer.io/"
+						class="hvr-buzz"
+						target="_blank"
+						rel="noopener noreferrer"
+						>BLOG</a
+					>
+					<a
+						href="https://contest.deepcomposer.io/"
+						class="hvr-buzz"
+						target="_blank"
+						rel="noopener noreferrer"
+						>CONTEST</a
+					>
+				</div>
+				<div
+					style="position: absolute; bottom: 0; margin-bottom: 5px; font-size: 0.7em;"
+				>
+					<p>
+						Designed by
+						<a
+							style="color: rgb(23, 164, 219);; text-decoration: none;"
+							href="https://github.com/manolingam"
+							>Mano</a
+						>
+					</p>
+					<p>2020 &copy; deepcomposer.io</p>
+				</div>
 			</section>
 			<!-- <div class="ocean">
 				<div class="wave"></div>
