--- a/index.html
+++ b/index.html
@@ -20,6 +20,20 @@
 				</ul>
 			</nav>
 			<section id="home">
+				<div class="muzieknootjes">
+					<div class="noot-1">
+						&#9835; &#9833;
+					</div>
+					<div class="noot-2">
+						&#9833;
+					</div>
+					<div class="noot-3">
+						&#9839; &#9834;
+					</div>
+					<div class="noot-4">
+						&#9834;
+					</div>
+				</div>
 				<img
 					src="assets/deepcomposer.png"
 					alt="deepcomposer"
@@ -84,10 +98,6 @@
 					<p>2020 &copy; deepcomposer.io</p>
 				</div>
 			</section>
-			<!-- <div class="ocean">
-				<div class="wave"></div>
-				<div class="wave"></div>
-			</div> -->
 		</div>
 	</body>
 </html>
