UI experiment commit

--- a/index.html
+++ b/index.html
@@ -20,45 +20,48 @@
 				</ul>
 			</nav>
 			<section id="home">
-				<div class="muzieknootjes">
-					<div class="noot-1">
-						&#9835; &#9833;
+				<div class="home-container">
+					<div class="muzieknootjes">
+						<div class="noot-1">
+							&#9835; &#9833;
+						</div>
+						<div class="noot-2">
+							&#9833;
+						</div>
+						<div class="noot-3">
+							&#9839; &#9834;
+						</div>
+						<div class="noot-4">
+							&#9834;
+						</div>
 					</div>
-					<div class="noot-2">
-						&#9833;
-					</div>
-					<div class="noot-3">
-						&#9839; &#9834;
-					</div>
-					<div class="noot-4">
-						&#9834;
-					</div>
+					<img
+						src="assets/deepcomposer.png"
+						alt="deepcomposer"
+						class="animated bounceInDown"
+					/>
+					<h1
+						style="color: rgb(23, 164, 219);"
+						class="animated fadeIn delay-1s"
+					>
+						AWS Deepcomposer Community
+					</h1>
+					<p style="max-width: 50%;" class="animated fadeIn delay-1s">
+						A community of AWS DeepComposer enthusiasts established
+						to share ideas and questions, helping to expand our
+						collective knowledge! We have the biggest collection of
+						AWS League winners, ready and willing to share their
+						expertise with others! Join the conversation on Slack
+						today:
+					</p>
+					<a
+						href="http://join.deepracing.io"
+						class="hvr-buzz"
+						target="_blank"
+						rel="noopener noreferrer"
+						>JOIN US ON SLACK</a
+					>
 				</div>
-				<img
-					src="assets/deepcomposer.png"
-					alt="deepcomposer"
-					class="animated bounceInDown"
-				/>
-				<h1
-					style="color: rgb(23, 164, 219);"
-					class="animated fadeIn delay-1s"
-				>
-					AWS Deepcomposer Community
-				</h1>
-				<p style="max-width: 50%;" class="animated fadeIn delay-1s">
-					A community of AWS DeepComposer enthusiasts established to
-					share ideas and questions, helping to expand our collective
-					knowledge! We have the biggest collection of AWS League
-					winners, ready and willing to share their expertise with
-					others! Join the conversation on Slack today:
-				</p>
-				<a
-					href="http://join.deepracing.io"
-					class="hvr-buzz"
-					target="_blank"
-					rel="noopener noreferrer"
-					>JOIN US ON SLACK</a
-				>
 			</section>
 			<section id="about">
 				<h1 style="color: rgb(23, 164, 219);">About Us</h1>
@@ -84,9 +87,7 @@
 						>CONTEST</a
 					>
 				</div>
-				<div
-					style="position: absolute; bottom: 0; margin-bottom: 5px; font-size: 0.7em;"
-				>
+				<div style="position: absolute; bottom: 0; font-size: 0.7em;">
 					<p>
 						Designed by
 						<a
