increased paragraph width in small screens

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					>
 						AWS Deepcomposer Community
 					</h1>
-					<p style="max-width: 50%;" class="animated fadeIn delay-1s">
+					<p class="animated fadeIn delay-1s">
 						A community of AWS DeepComposer enthusiasts established
 						to share ideas and questions, helping to expand our
 						collective knowledge! We have the biggest collection of
@@ -65,7 +65,7 @@
 			</section>
 			<section id="about">
 				<h1 style="color: rgb(23, 164, 219);">About Us</h1>
-				<p style="max-width: 50%;">
+				<p>
 					Lorem, ipsum dolor sit amet consectetur adipisicing elit.
 					Soluta nobis architecto sapiente, quasi et ducimus incidunt
 					expedita dolores laborum asperiores doloremque corrupti odit
