changed hover animations

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 		<div class="container">
 			<nav>
 				<ul>
-					<li><a href="#home" class="hvr-buzz">Home</a></li>
-					<li><a href="#about" class="hvr-buzz">About</a></li>
+					<li><a href="#home" class="hvr-ripple-in">Home</a></li>
+					<li><a href="#about" class="hvr-ripple-in">About</a></li>
 				</ul>
 			</nav>
 			<section id="home">
@@ -56,7 +56,7 @@
 					</p>
 					<a
 						href="http://join.deepracing.io"
-						class="hvr-buzz"
+						class="hvr-grow"
 						target="_blank"
 						rel="noopener noreferrer"
 						>JOIN US ON SLACK</a
@@ -74,14 +74,14 @@
 				<div class="external-links">
 					<a
 						href="https://blog.deepcomposer.io/"
-						class="hvr-buzz"
+						class="hvr-grow"
 						target="_blank"
 						rel="noopener noreferrer"
 						>BLOG</a
 					>
 					<a
 						href="https://contest.deepcomposer.io/"
-						class="hvr-buzz"
+						class="hvr-grow"
 						target="_blank"
 						rel="noopener noreferrer"
 						>CONTEST</a
