changed nav position

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	</head>
 	<body>
 		<div class="container">
+			<a id="title" href="#home">DEEPCOMPOSER.IO</a>
 			<nav>
 				<ul>
 					<li><a href="#home" class="hvr-ripple-in">Home</a></li>
@@ -87,7 +88,7 @@
 						>CONTEST</a
 					>
 				</div>
-				<div style="position: absolute; bottom: 0; font-size: 0.7em;">
+				<div>
 					<p>
 						Designed by
 						<a
