wrapped home content in a div

--- a/index.html
+++ b/index.html
@@ -41,27 +41,26 @@
 						alt="deepcomposer"
 						class="animated bounceInDown"
 					/>
-					<h1
-						style="color: rgb(23, 164, 219);"
-						class="animated fadeIn delay-1s"
-					>
-						AWS Deepcomposer Community
-					</h1>
-					<p class="animated fadeIn delay-1s">
-						A community of AWS DeepComposer enthusiasts established
-						to share ideas and questions, helping to expand our
-						collective knowledge! We have the biggest collection of
-						AWS League winners, ready and willing to share their
-						expertise with others! Join the conversation on Slack
-						today:
-					</p>
-					<a
-						href="http://join.deepracing.io"
-						class="hvr-grow"
-						target="_blank"
-						rel="noopener noreferrer"
-						>JOIN US ON SLACK</a
-					>
+					<div class="animated fadeIn delay-1s home-content">
+						<h1 style="color: rgb(23, 164, 219);">
+							AWS Deepcomposer Community
+						</h1>
+						<p>
+							A community of AWS DeepComposer enthusiasts
+							established to share ideas and questions, helping to
+							expand our collective knowledge! We have the biggest
+							collection of AWS League winners, ready and willing
+							to share their expertise with others! Join the
+							conversation on Slack today:
+						</p>
+						<a
+							href="http://join.deepracing.io"
+							class="hvr-grow"
+							target="_blank"
+							rel="noopener noreferrer"
+							>JOIN US ON SLACK</a
+						>
+					</div>
 				</div>
 			</section>
 			<section id="about">
