UI and functionality is complete

--- a/index.html
+++ b/index.html
@@ -66,34 +66,59 @@
 			<section id="about">
 				<h1 style="color: rgb(23, 164, 219);">About Us</h1>
 				<p>
-					Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-					Soluta nobis architecto sapiente, quasi et ducimus incidunt
-					expedita dolores laborum asperiores doloremque corrupti odit
-					molestias nam aut fugiat ad! Ipsa, vero?
+					The AWS DeepComposer Community is born out of the original
+					<a
+						href="https://deepracing.io/"
+						target="_blank"
+						rel="noopener noreferrer"
+						style="text-decoration: none; font-style: italic; color: white; font-weight: bold;"
+						>AWS DeepRacer Community</a
+					>
+					founded by Lyndon Leggate following the AWS London Summit
+					2019. The community has since grown into so much more apart
+					from Deepracer. We have become one of AWS' most successful
+					community groups and we now have direct lines of
+					communication to various AWS teams.
 				</p>
 				<div class="external-links">
 					<a
-						href="https://blog.deepcomposer.io/"
-						class="hvr-grow"
-						target="_blank"
-						rel="noopener noreferrer"
-						>BLOG</a
-					>
-					<a
-						href="https://contest.deepcomposer.io/"
+						href="https://contest.deepracing.io/"
 						class="hvr-grow"
 						target="_blank"
 						rel="noopener noreferrer"
 						>CONTEST</a
 					>
 				</div>
-				<div>
+				<div class="social">
+					<a
+						href="https://www.youtube.com/channel/UCgKGzMFBUULYLMT6_vv2T5g"
+						class="hvr-grow"
+						target="_blank"
+						rel="noopener noreferrer"
+						><img src="assets/youtube.png" alt="youtube"
+					/></a>
+					<a
+						href="https://blog.deepracing.io"
+						class="hvr-grow"
+						target="_blank"
+						rel="noopener noreferrer"
+						><img src="assets/blog.png" alt="blog"
+					/></a>
+					<a
+						href="https://wiki.deepracing.io"
+						class="hvr-grow"
+						target="_blank"
+						rel="noopener noreferrer"
+						><img src="assets/wiki.png" alt="wiki"
+					/></a>
+				</div>
+				<div style="margin-top: 1em;">
 					<p>
-						Designed by
+						DESIGNED BY
 						<a
 							style="color: rgb(23, 164, 219);; text-decoration: none;"
 							href="https://github.com/manolingam"
-							>Mano</a
+							>MANO</a
 						>
 					</p>
 					<p>2020 &copy; deepcomposer.io</p>
