minor letter space fix

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		/>
 		<link rel="stylesheet" href="style.css" />
 	</head>
+
 	<body>
 		<div class="container">
 			<a id="title" href="#home">DEEPCOMPOSER.IO</a>
@@ -72,9 +73,10 @@
 						target="_blank"
 						rel="noopener noreferrer"
 						style="text-decoration: none; font-style: italic; color: white; font-weight: bold;"
-						>AWS DeepRacer Community</a
 					>
-					founded by Lyndon Leggate following the AWS London Summit
+						AWS DeepRacer Community</a
+					>
+					, founded by Lyndon Leggate following the AWS London Summit
 					2019. The community has since grown into so much more apart
 					from Deepracer. We have become one of AWS' most successful
 					community groups and we now have direct lines of
