updated about us section

--- a/index.html
+++ b/index.html
@@ -67,7 +67,12 @@
 			<section id="about">
 				<h1 style="color: rgb(23, 164, 219);">About Us</h1>
 				<p>
-					The AWS DeepComposer Community is born out of the original
+					The AWS DeepComposer Community is a group interested in
+					machine learning, music and how to combine the two. In fact
+					many of us are neither musicians nor machine learning
+					experts, we are just people driven by curiosity & creative
+					mindset. Many of us spent last year learning through playing
+					with AWS DeepRacer & are a part of the
 					<a
 						href="https://deepracing.io/"
 						target="_blank"
@@ -75,12 +80,9 @@
 						style="text-decoration: none; font-style: italic; color: white; font-weight: bold;"
 					>
 						AWS DeepRacer Community</a
-					>
-					, founded by Lyndon Leggate following the AWS London Summit
-					2019. The community has since grown into so much more apart
-					from Deepracer. We have become one of AWS' most successful
-					community groups and we now have direct lines of
-					communication to various AWS teams.
+					>. The two share the communication space and together form
+					the AWS Machine Learning Community where we can both learn,
+					share & experience.
 				</p>
 				<div class="external-links">
 					<a
