updated about us wordings

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 					The AWS DeepComposer Community is a group interested in
 					machine learning, music and how to combine the two. In fact
 					many of us are neither musicians nor machine learning
-					experts, we are just people driven by curiosity & creative
-					mindset. Many of us spent last year learning through playing
-					with AWS DeepRacer & are a part of the
+					experts, we are just people driven by curiosity and a
+					creative mindset. Many of us spent last year learning
+					through playing with AWS DeepRacer and are a part of the
 					<a
 						href="https://deepracing.io/"
 						target="_blank"
@@ -81,8 +81,8 @@
 					>
 						AWS DeepRacer Community</a
 					>. The two share the communication space and together form
-					the AWS Machine Learning Community where we can both learn,
-					share & experience.
+					the AWS Machine Learning Community where we can both learn
+					and share our experiences.
 				</p>
 				<div class="external-links">
 					<a
